# flecs-experiments

./: .gitmodules  CMakeLists.txt  animate.cpp  animate.h  draw.cpp  draw.h  main.cpp  sdf.cpp  sdf.h  sdf_fragments.h  transform.cpp  transform.h  util.h  vectors.h
assets/: init.plecs
assets/shaders/: effect_onion.glsl  effect_transform.glsl  paint_solid.glsl  preamble.glsl  sample_arc.glsl  sample_circle.glsl  sample_line.glsl
